[project]
name = "pymkmkit"
version = "0.1.0"
dependencies = [
    "click", 
    "pyyaml", 
    "numpy",
    "ase",
    "matplotlib",
    "rich"
]

[project.scripts]
pymkmkit = "pymkmkit.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pymkmkit*"]
